WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
211252
[MSE] Audio session category is sometimes not set correctly after changing video source
https://bugs.webkit.org/show_bug.cgi?id=211252
Summary
[MSE] Audio session category is sometimes not set correctly after changing vi...
Eric Carlson
Reported
2020-04-30 14:14:40 PDT
Audio session category is sometimes not set correctly after changing video source
Attachments
Patch
(1.27 MB, patch)
2020-04-30 14:49 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
Patch
(15.07 KB, patch)
2020-04-30 16:38 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2020-04-30 14:16:02 PDT
<
rdar://problem/61894737
>
Eric Carlson
Comment 2
2020-04-30 14:49:56 PDT
Created
attachment 398094
[details]
Patch
Eric Carlson
Comment 3
2020-04-30 16:38:50 PDT
Created
attachment 398123
[details]
Patch
EWS
Comment 4
2020-05-01 10:05:28 PDT
Committed
r261004
: <
https://trac.webkit.org/changeset/261004
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 398123
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug