[MSE] Audio session category is sometimes not set correctly after changing video source https://bugs.webkit.org/show_bug.cgi?id=211252 <rdar://problem/61894737>

Reviewed by Jer Noble.

Source/WebCore:

Test: media/media-source/media-source-change-source.html

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::mediaPlayerActiveSourceBuffersChanged): Call checkForAudioAndVideo.
(WebCore::HTMLMediaElement::audioTrackEnabledChanged): Ditto.
(WebCore::HTMLMediaElement::videoTrackSelectedChanged): Ditto.
(WebCore::HTMLMediaElement::mediaPlayerCharacteristicChanged): Ditto.
(WebCore::HTMLMediaElement::updatePlayState): Ditto.
(WebCore::HTMLMediaElement::checkForAudioAndVideo): New, update m_hasEverHadAudio and m_hasEverHadVideo
and call m_mediaSession->canProduceAudioChanged.
(WebCore::HTMLMediaElement::mediaType const): Put `hasVideo()` in a local variable since it
is used more than once.
* html/HTMLMediaElement.h:

* platform/audio/cocoa/MediaSessionManagerCocoa.mm:
(WebCore::MediaSessionManagerCocoa::updateSessionState): Iterate over the list of media
sessions once, not five times.
* platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaSourceAVFObjC.mm:
(WebCore::MediaPlayerPrivateMediaSourceAVFObjC::addAudioRenderer): Call m_player->characteristicChanged()
rather than m_player->renderingModeChanged().

LayoutTests:

* platform/mac/media/media-source/media-source-change-source-expected.txt: Added.
* platform/mac/media/media-source/media-source-change-source.html: Added.


Canonical link: https://commits.webkit.org/224185@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261004 268f45cc-cd09-0410-ab3c-d52691b4dbfc